syntax = "proto3";

package services.tasks.v1;

import "buf/validate/validate.proto";
import "google/api/annotations.proto";
import "google/protobuf/field_mask.proto";
import "google/protobuf/timestamp.proto";
import "google/protobuf/wrappers.proto";
import "services/events/v1/events.proto";
import "types/v1/meta.proto";

option go_package = "github.com/amimof/voiyd/api/services/tasks/v1;tasks";

service TaskService {
  rpc Get(GetRequest) returns (GetResponse) {
    option (google.api.http) = {get: "/api/v1/tasks/{id}"};
  }
  rpc List(ListRequest) returns (ListResponse) {
    option (google.api.http) = {get: "/api/v1/tasks"};
  }
  rpc Create(CreateRequest) returns (CreateResponse) {
    option (google.api.http) = {
      post: "/api/v1/tasks"
      body: "task"
    };
  }
  rpc Update(UpdateRequest) returns (UpdateResponse) {
    option (google.api.http) = {
      put: "/api/v1/tasks/{task.meta.name}"
      body: "task"
    };
  }
  rpc Patch(PatchRequest) returns (PatchResponse) {
    option (google.api.http) = {
      patch: "/api/v1/tasks/{task.meta.name}"
      body: "task"
    };
  }
  rpc Delete(DeleteRequest) returns (DeleteResponse) {
    option (google.api.http) = {delete: "/api/v1/tasks/{id}"};
  }
  rpc Start(StartRequest) returns (StartResponse) {
    option (google.api.http) = {put: "/api/v1/tasks/{id}/start"};
  }
  rpc Kill(KillRequest) returns (KillResponse) {
    option (google.api.http) = {put: "/api/v1/tasks/{id}/kill"};
  }
  rpc UpdateStatus(UpdateStatusRequest) returns (UpdateStatusResponse) {
    option (google.api.http) = {put: "/api/v1/tasks/{id}/status"};
  }
}

message Task {
  string version = 1 [
    (buf.validate.field).string.min_len = 4,
    (buf.validate.field).string.pattern = "^[a-z0-9]+(?:[._-][a-z0-9]+)*/[a-z0-9]+(?:[._-][a-z0-9]+)*$",
    (buf.validate.field).required = true
  ];
  types.v1.Meta meta = 2 [(buf.validate.field).required = true];
  Config config = 3 [(buf.validate.field).required = true];
  Status status = 5;
}

message Status {
  google.protobuf.StringValue phase = 1;
  google.protobuf.StringValue status = 2;
  google.protobuf.StringValue node = 3;
  google.protobuf.StringValue ip = 4;
  TaskStatus task = 5;
  RuntimeStatus runtime = 6;
  google.protobuf.StringValue id = 7;
}

message TaskStatus {
  google.protobuf.UInt32Value pid = 1;
  google.protobuf.UInt32Value exit_code = 2;
  google.protobuf.Timestamp exit_time = 3;
  google.protobuf.StringValue error = 4;
}

message RuntimeStatus {
  string runtime_env = 1;
  string runtime_version = 2;
  string stdout_path = 3;
  string stderr_path = 4;
  string task_id = 5;
}

message Config {
  string image = 1 [(buf.validate.field).string.min_len = 1];
  repeated string args = 2;
  repeated EnvVar envvars = 3;
  repeated Mount mounts = 4;
  repeated PortMapping port_mappings = 5;
  map<string, string> node_selector = 6;
}

message Mount {
  string name = 1 [(buf.validate.field).string.min_len = 1];
  string destination = 2;
  string type = 3;
  string volume = 4;
  string source = 5;
  repeated string options = 6;
}

message EnvVar {
  string name = 1 [(buf.validate.field).string.min_len = 1];
  string value = 2 [(buf.validate.field).string.min_len = 1];
}

message PortMapping {
  string name = 1 [(buf.validate.field).string.min_len = 1];
  uint32 hostPort = 2;
  uint32 targetPort = 3;
  string protocol = 4;
  string host_ip = 5;
}

enum Phase {
  UNKNOWN = 0;
  STARTING = 1;
  STOPPING = 2;
  RUNNING = 3;
  ERROR = 4;
  PULLING = 5;
  DELETING = 6;
  SCHEDULING = 7;
}

message Event {
  google.protobuf.Timestamp created = 1;
  services.events.v1.EventType type = 2;
  string description = 3;
}

message GetRequest {
  string id = 1 [(buf.validate.field).string.min_len = 1];
}

message GetResponse {
  Task task = 1;
}

message CreateRequest {
  Task task = 1 [(buf.validate.field).required = true];
}

message CreateResponse {
  Task task = 1;
}

message UpdateRequest {
  string id = 1 [(buf.validate.field).string.min_len = 1];
  Task task = 2 [(buf.validate.field).required = true];
  google.protobuf.FieldMask update_mask = 3;
}

message UpdateResponse {
  Task task = 1;
}

message PatchRequest {
  string id = 1 [(buf.validate.field).string.min_len = 1];
  Task task = 2 [(buf.validate.field).required = true];
  google.protobuf.FieldMask update_mask = 3;
}

message PatchResponse {
  Task task = 1;
}

message DeleteRequest {
  string id = 1 [(buf.validate.field).string.min_len = 1];
}

message DeleteResponse {
  string id = 1;
}

message ListRequest {
  map<string, string> selector = 1;
}

message ListResponse {
  repeated Task tasks = 1;
}

message StartRequest {
  string id = 1 [(buf.validate.field).string.min_len = 1];
}

message StartResponse {
  string id = 1;
}

message StopRequest {
  string id = 1 [(buf.validate.field).string.min_len = 1];
}

message StopResponse {
  string id = 1;
}

message KillRequest {
  string id = 1 [(buf.validate.field).string.min_len = 1];
  bool forceKill = 2;
}

message KillResponse {
  string id = 1;
}

message UpdateStatusRequest {
  string id = 1;
  google.protobuf.FieldMask update_mask = 2 [(buf.validate.field).required = true];
  Status status = 3 [(buf.validate.field).required = true];
}
message UpdateStatusResponse {
  string id = 1;
}
